1999-12-13  Kenichi OKADA <okada@opaopa.org>

	* digest-md5.el (digest-md5-parse-digest-challenge): Fix.

1999-12-13  Kenichi OKADA <okada@opaopa.org>

	* digest-md5.el (digest-md5-digest-response): Update.
	(digest-md5-make-cnonce): New function.
	(digest-md5-parse-digest-challenge): New function.

1999-12-13  Kenichi OKADA <okada@opaopa.org>

	* FLIM-ELS (flim-modules): Add `unique-id'.
	* smtp.el (TopLevel): Add autoload `sasl-scram-md5'.

1999-12-13  Kenichi OKADA <okada@opaopa.org>

	* unique-id.el: New file.
	* scram-md5.el (TopLevel): Require `unique-id'.
	(scram-make-unique-nonce): Use `unique-id'.
	* sasl.el (sasl-number-base36): Delete.
	(sasl-unique-id-char): Delete.
	(sasl-unique-id): Delete.

1999-12-13  Kenichi OKADA <okada@opaopa.org>

	* FLIM-ELS (flim-modules): Add `digest-md5'.

1999-12-13  Kenichi OKADA <okada@opaopa.org>

	* digest-md5.el: New file.
	(digest-md5-digest-uri): New function.
	(digest-md5-digest-response): New function.

1999-12-13  Kenichi OKADA <okada@opaopa.org>

	* sasl.el (sasl-scram-md5-authenticate-server): Require salted-pass
	instead of passphrase.
	(sasl-scram-md5-client-msg-2): Ditto.

1999-12-13  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (smtp-auth-scram-md5): Erase insecure sequences.
	* sasl.el (sasl-scram-md5-client-msg-2): Erase insecure sequences.
	(TopLevel): Add example for `scram-md5'.
	* scram.el (scram-md5-make-server-msg-2): Rename from `scram-md5-authenticate-server'.
	(scram-md5-make-salted-pass): Don't erase passphrase.
	(scram-make-unique-nonce): Erase unique-id.
	(scram-md5-make-client-msg-1): Erase nonce.
	(scram-md5-make-shared-key): Erase buffer.
	(scram-md5-make-server-msg-2): Ditto.

1999-12-13  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (smtp-auth-scram-md5): New function.
	(smtp-authentication-method-alist): Add `scram-md5'.

1999-12-12  Kenichi OKADA <okada@opaopa.org>

	* sasl.el (TopLevel): Require `scram-md5'.

1999-12-11  Kenichi OKADA <okada@opaopa.org>
